# mukhtabir-sdk

./: .gitignore  AGENTS.md  README.md  pytest.ini
.github/workflows/: python-sdk-release.yml  python-sdk.yml  typescript-sdk-ci.yml  typescript-sdk-release.yml
doc/: mcp-interview-content-api-plan.md  mcp-server-remote-security.md  mcp-server-validation.md
mcp/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
mcp/scripts/: start-http.sh
mcp/src/: authorization.ts  cli-main.ts  cli.ts  config.ts  errors.ts  http-auth.ts  http.ts  index.ts  schemas.ts  server.ts  shared-hosting.ts
mcp/test/: adapter.test.ts  audit.test.ts  (+12 more)
python/: LICENSE  README.md  pyproject.toml
python/scripts/: run-live-integration.sh
python/src/mukhtabir/: __init__.py  _exceptions.py  _pagination.py  _parsing.py  _transport.py  _webhooks.py  async_client.py  client.py  errors.py
python/src/mukhtabir/models/: __init__.py  candidates.py  common.py  feedback.py  interview_analytics.py  interview_content.py  interview_requests.py  interviews.py  webhooks.py
python/src/mukhtabir/resources/: __init__.py  _request_specs.py  async_candidates.py  async_feedback.py  async_interviews.py  async_webhooks.py  candidates.py  feedback.py  interviews.py  sync_candidates.py  sync_feedback.py  sync_interviews.py  sync_webhooks.py  webhooks.py
python/src/mukhtabir/webhooks/: __init__.py  events.py  models.py  requests.py  responses.py  security.py
python/tests/: conftest.py  test_errors.py  test_integration.py  test_models.py  test_pagination.py  test_resources.py  test_transport.py  test_webhooks.py
python/tests/support/: __init__.py  integration.py
typescript/: README.md  build-constants.ts  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts  vitest.integration.config.ts
(+68 files in other folders)
