[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "mukhtabir"
dynamic = ["version"]
description = "Typed Python SDK for the Mukhtabir API"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
  { name = "Mukhtabir SDK Contributors" },
]
dependencies = [
  "httpx>=0.27,<1.0",
]
keywords = ["mukhtabir", "sdk", "api", "httpx"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/voramind/mukhtabir-sdk"
Repository = "https://github.com/voramind/mukhtabir-sdk"
Issues = "https://github.com/voramind/mukhtabir-sdk/issues"

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.9,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mukhtabir"]

[tool.hatch.version]
path = "src/mukhtabir/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: live API smoke tests that require MUKHTABIR_INTEGRATION=1 and credentials",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "T20", "UP"]

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
